# mooseprojects

./: .gitignore  Makefile  README.md  coupled_neutronics_thermal.i  mermaid  mesh.i  mooseprojects-dbg  mooseprojects-opt  mooseprojects.mk  mooseprojects.yaml  multiapp2.mk  neutronic.i  neutronic_exodus_out.e  neutronic_out.csv  neutronic_out.e  neutronic_vtk_000.pvtu  neutronic_vtk_000_0.vtu  neutronic_vtk_000_1.vtu  neutronic_vtk_000_10.vtu  neutronic_vtk_000_11.vtu  neutronic_vtk_000_12.vtu  neutronic_vtk_000_13.vtu  neutronic_vtk_000_14.vtu  neutronic_vtk_000_15.vtu  neutronic_vtk_000_16.vtu  neutronic_vtk_000_17.vtu  neutronic_vtk_000_18.vtu  neutronic_vtk_000_19.vtu  neutronic_vtk_000_2.vtu  neutronic_vtk_000_3.vtu  neutronic_vtk_000_4.vtu  neutronic_vtk_000_5.vtu  neutronic_vtk_000_6.vtu  neutronic_vtk_000_7.vtu  neutronic_vtk_000_8.vtu  neutronic_vtk_000_9.vtu  neutronic_vtk_001.pvtu  neutronic_vtk_001_0.vtu  neutronic_vtk_001_10.vtu  neutronic_vtk_001_11.vtu  (+47 more)
contrib/: AUTO_WORKFLOW.md  CMAKE_vs_DIRECT.md  FORTRAN_DEPENDENCY_GUIDE.md  OPENMP_README.md  QUICK_START.md  README_FORTRAN.md  analyze_fortran_deps.py  tran_heat.mk  使用说明.txt  编译方式说明.md
contrib/tran_heat/: CMakeLists.txt  calculate.f90  compile_mpi.sh  input.f90  interface.f90  output.f90  reactor_interfaces.f90  reactor_interfaces.mod  reactor_interfaces.x86_64-conda-linux-gnu.dbg.lo  reactor_interfaces.x86_64-conda-linux-gnu.opt.lo  reactor_interfaces_safe.x86_64-conda-linux-gnu.dbg.lo  reactor_interfaces_safe.x86_64-conda-linux-gnu.opt.lo  tran_heat_auto.mk
contrib/tran_heat/modules/: reactor_interfaces.mod
contrib/tran_heat/src/: reactor_interfaces.f90  test_fortran77.f
doc/: config.yml  sqa_reports.yml
doc/content/: index.md
docs/: 1.txt  C++_Include最佳实践.md  ReactorCouplingUserObject架构分析.md  ReactorGlobalState快速测试.md  ReactorGlobalState方案对比.md  参数传递说明.md  头文件循环依赖问题与解决方案.md  如何使用ReactorGlobalState修改现有代码.md
examples/: parameter_passing_example.i
examples/coupled/: coupled.i  neutronics_sub.i  thermal_sub.i
examples/standalone/: neutronics.i
examples/结构图/: ConditionalMultiAppCopyTransfer 工作流程图.inp  TemperatureConvergencePostprocessor 工作流程图.inp  transfer-postprocessor流程图.inp  中子学-热工耦合模式计算流程图.inp  完整数据流图.inp  独立中子学.inp  耦合迭代.inp
include/base/: LevelSetTypes.h  mooseprojectsApp.h  multiapp2App.h
lib/: libmooseprojects-opt.la  libmooseprojects-opt.so.0.0.0
src/: MultiApp2AppApp.C  main.C  main.x86_64-conda-linux-gnu.dbg.lo  main.x86_64-conda-linux-gnu.dbg.lo.d  main.x86_64-conda-linux-gnu.opt.lo  main.x86_64-conda-linux-gnu.opt.lo.d  reactor_interfaces.f90  reactor_interfaces.mod  reactor_interfaces.x86_64-conda-linux-gnu.opt.lo
test/: run_tests.sh
unit/: Makefile  run_tests
unit/src/: main.C
(+70 files in other folders)
